<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <!--
    <item
        android:id="@+id/action_hurricane"
        android:actionProviderClass="com.navbuilder.app.hurricane.HurricaneActionProvider"
        android:orderInCategory="1"
        android:showAsAction="always"
        android:title="Hurricane">
    </item>
    -->
    <item
        android:id="@+id/action_search"
        android:actionViewClass="com.navbuilder.app.hurricane.customview.SingleSearchView"
        android:icon="@drawable/actionbar_search"
        android:orderInCategory="2"
        android:showAsAction="always"
        android:title="@string/action_search"/>
    <!--
    <item
        android:id="@+id/action_asr"
        android:icon="@drawable/actionbar_asr"
        android:orderInCategory="3"
        android:showAsAction="always"
        android:title="@string/action_asr"/>
    -->
    <item
        android:id="@+id/action_account_manager"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_account_manager"/>
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="101"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
    <item
        android:id="@+id/action_about"
        android:orderInCategory="102"
        android:showAsAction="never"
        android:title="@string/action_about"/>

</menu>